--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Grammar Structure Demo</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <h1>Grammar Structure Demo</h1>
+  <div id="sentence"></div>
+  <div id="tooltip" class="hidden"></div>
 
+  <script src="script.js"></script>
+</body>
+</html>
